# rust-authorization

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2024-09-20-080959_create_users/: up.sql
src/: api.rs  db.rs  handlers.rs  hashing.rs  main.rs  models.rs  repo.rs  schema.rs  token.rs
