[package]
name = "author"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
diesel = { version = "2.1", features = ["postgres"] }
diesel-async = { version = "0.4", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "0.7", features = ["v4", "serde"] }
