[package]
name = "author"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
diesel = { version = "2.1", features = ["postgres"] }
diesel-async = "0.4.0"
dotenvy = "0.15"
rand_core = "0.6.4"
