[package]
name = "author"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.3"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
diesel-async = "0.4.0"
dotenv = "0.15"
once_cell = "1.17"
rand_core = "0.6.4"
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
